--- a/Estilo.css
+++ b/Estilo.css
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 600px) {
+    .container {
+        width: 100%;
+        padding: 10px;
+    }
+}
 body {
     font-family: Arial, sans-serif;
     margin: 0;
