--- a/Estilo.css
+++ b/Estilo.css
@@ -1,13 +1,19 @@
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+.container {
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+}
 @media only screen and (max-width: 600px) {
     .container {
         width: 100%;
         padding: 10px;
     }
-}
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
 }
 header {
     background-color:#1F2668;
