--- a/Estilo.css
+++ b/Estilo.css
@@ -8,6 +8,12 @@ body {
     margin: 0 auto;
     padding: 20px;
 }
+@media only screen and (max-width: 600px) {
+    .container {
+        width: 100%;
+        padding: 10px;
+    }
+}
 
 header {
     background-color:#1F2668;
