--- a/Estilo.css
+++ b/Estilo.css
@@ -3,68 +3,44 @@ body {
     margin: 0;
     padding: 0;
 }
-
 .container {
-    width: 80%; /* Cambiado a % */
+    width: 80%;
     margin: 0 auto;
-    padding: 2%; /* Cambiado a % */
+    padding: 20px;
 }
 
 header {
     background-color:#1F2668;
     color: #fff;
-    padding: 1% 0; /* Cambiado a % */
+    padding: 10px 0;
     text-align: center;
 }
-
 nav {
     background-color: #555;
     color: #fff;
     text-align: center;
-    padding: 1% 0; /* Cambiado a % */
+    padding: 10px 0;
 }
-
 nav a {
     color: #fff;
     text-decoration: none;
-    margin: 0 2%; /* Cambiado a % */
+    margin: 0 10px;
 }
-
 section {
-    padding: 2%; /* Cambiado a % */
-    margin: 2% auto; /* Cambiado a % */
-    max-width: 95%; /* Cambiado a % */
+    padding: 20px;
+    margin: 20px auto;
+    max-width: 800px;
 }
-
 footer {
     background-color: #1F2668;
     color: #fff;
     text-align: center;
-    padding: 1% 0; /* Cambiado a % */
+    padding: 10px 0;
     position: fixed;
     bottom: 0;
-    width: 75%; /* Cambiado a % */
+    width: 75%;
 }
-
 .carousel-item img {
     width: 100%;
     height: auto;
-}
-
-/* Consultas de medios para ajustar estilos en diferentes tamaños de pantalla */
-@media screen and (max-width: 768px) {
-    .container {
-        width: 90%;
-        padding: 5%;
-    }
-
-    section {
-        padding: 5%;
-        margin: 5% auto;
-        max-width: 100%;
-    }
-
-    footer {
-        width: 100%;
-    }
 }
